# libassert

./: CMakeLists.txt  NEWS.rst  README.rst  resolve.json  wscript
.github/workflows/: linux_cmake.yml  linux_mkspecs.yml  windows_cmake.yml
test/: libassert_tests.cpp
test/src/: test_libassert.cpp
